--- a/templates/auth/default.html
+++ b/templates/auth/default.html
@@ -13,6 +13,8 @@
 {%endblock%}
 
 {%block content%}
+<div id="alerts" class="absolute z-10 top-2 right-2">
+</div>
 <div class="w-screen h-screen flex custom-bg-gradiente">
 
     {% block page_content %}
